@@ -21,6 +21,12 @@ The contribution rewrote a test class file to preview bytecode and added --enabl
 
 The added Checker_qualTest top-level class was declared package-private, violating FS-test-contract.1.2, which requires every top-level test class to be public. The violation was wholly within the target coordinate's new test source and was repairable under FS-contribution-contract.5.1.
 
+## 2026-09-18 — org.xerial.snappy:snappy-java:1.1.0.1 (#10048)
+
+**Native Image coverage was bypassed by test-created runtime class loading**
+
+The original test created child-loaded copies of the library and test providers with URLClassLoader.defineClass, then wrapped the entire library exercise in NativeImageSupport.runToleratingUnsupportedFeature. Because the unsupported operation came from the test harness rather than unavoidable library behavior, Native Image could accept the class-definition failure before executing the Snappy assertions, violating the native-execution and no-runtime-class-definition rules. The accompanying --add-opens native build flag was also unnecessary for the repaired public-API path.
+
 ## 2026-09-18 — io.micronaut:micronaut-http-client-core:5.1.11 (#10079)
 
 **Test dependencies pin the requested artifact version**
